@@ -9,6 +9,9 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  03 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_dep.py: Enhanced
+	the invalid depend string identification for || (and &&) strings.
+
 *portage-2.0.51_pre15 (03 Aug 2003): Fixes and Public Readiness
 
   03 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Corrected 
